--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <div class="profile__content">
                     <img src="./images/profileAva.jpg" class="profile__avatar" alt="Аватарка">
                     <div class="profile__info">
-                        <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <p class="profile__description">Исследователь океана</p>
+                        <h1 class="profile__name">Жак-Ив Кусто </h1>
+                        <p class="profile__description">Исследователь океана Исследователь океана Исследователь океана
+                            Исследователь океана Исследователь океана
+                        </p>
                         <button type="button" class="button profile__edit"
                             aria-label="Редактировать информацию"></button>
                     </div>
@@ -76,26 +78,26 @@
 
     </div>
     <!-- block popup -->
-    <div class="popup">
+    <div class="popup ">
         <div class="popup__container">
             <button type="button" class="button popup__close" aria-label="Закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="form popup__form" name="profile-edit" novalidate>
                 <label for="username-input" class="popup__label">
-                    <input type="text" class="popup__input" name="username" placeholder="Введите имя"
-                        value="Жак-Ив Кусто">
+                    <input id="username-input" type="text" class="popup__input" name="username"
+                        placeholder="Введите имя" value="Жак-Ив Кусто">
                     <span class="username-input-error popup__input-error"></span>
                 </label>
                 <label for="description-input" class="popup__label">
-                    <input type="text" class="popup__input" name="description" placeholder="Введите описание"
-                        value="Исследователь океана">
+                    <input id="description-input" type="text" class="popup__input" name="description"
+                        placeholder="Введите описание" value="Исследователь океана">
                     <span class="description-input-error popup__input-error"></span>
                 </label>
                 <button type="submit" class="button popup__submit" aria-label="Сохранить">Сохранить</button>
             </form>
         </div>
     </div>
-
+    <script src="./scripts/popup.js"></script>
 </body>
 
 </html>
