--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </form>
         </div>
     </div>
-    <script src="./scripts/popup.js"></script>
+    <script src="./pages/index.js"></script>
 </body>
 
 </html>
