--- a/index.html
+++ b/index.html
@@ -32,42 +32,7 @@
                 <button type="button" class="button profile__add-card" aria-label="Добавить карточку"></button>
             </section>
 
-            <section class="cards">
-
-                <article class="card">
-                    <h2 class="card__title">Карачаевск-Карачаевск-Карачаевск-Карачаевск</h2>
-                    <img class="card__image" src="./images/cardPhoto_1.jpg" alt="фото древнего замка в Карачаевке">
-                    <button type="button" class="button button__like card__like" aria-label="в избранное"></button>
-                </article>
-                <article class="card">
-                    <h2 class="card__title">Гора Эльбрус</h2>
-                    <img class="card__image" src="./images/cardPhoto_3.jpg" alt="фото Гора Эльбрус">
-                    <button type="button" class="button button__like card__like card__like_active"
-                        aria-label="в избранное"></button>
-                </article>
-                <article class="card">
-                    <h2 class="card__title">Домбай</h2>
-                    <img class="card__image" src="./images/cardPhoto_2.jpg" alt="фото Домбай">
-                    <button type="button" class="button button__like card__like" aria-label="в избранное"></button>
-                </article>
-                <article class="card">
-                    <h2 class="card__title">Карачаевск</h2>
-                    <img class="card__image" src="./images/cardPhoto_3.jpg" alt="фото древнего замка в Карачаевке">
-                    <button type="button" class="button button__like card__like card__like_active"
-                        aria-label="в избранное"></button>
-                </article>
-                <article class="card">
-                    <h2 class="card__title">Карачаевск</h2>
-                    <img class="card__image" src="./images/cardPhoto_1.jpg" alt="фото древнего замка в Карачаевке">
-                    <button type="button" class="button button__like card__like" aria-label="в избранное"></button>
-                </article>
-                <article class="card">
-                    <h2 class="card__title">Карачаевск</h2>
-                    <img class="card__image" src="./images/cardPhoto_2.jpg" alt="фото древнего замка в Карачаевке">
-                    <button type="button" class="button button__like card__like" aria-label="в избранное"></button>
-                </article>
-
-            </section>
+            <section class="cards"></section>
         </main>
         <!-- block footer -->
         <footer class="footer">
@@ -97,6 +62,18 @@
             </form>
         </div>
     </div>
+    <!-- block addCard -->
+    <template id="cardItem">
+        <article class="card">
+            <h2 class="card__title"></h2>
+            <img class="card__image" src="" alt="изображение не загрузилось :(">
+            <button type="button" class="button button__like card__like" aria-label="в избранное"></button>
+        </article>
+    </template>
+
+
+
+
     <script src="./pages/index.js"></script>
 </body>
 
