--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Проект Mesto</title>
 </head>
 
@@ -12,14 +11,14 @@
     <div class="page">
         <!--block header -->
         <header class="header">
-            <img class="header__logo" src="./images/logo/logo.svg" alt="лого - надпись `Mesto`">
+            <img class="header__logo" src="<%=require('./images/logo/logo.svg')%>" alt="лого - надпись `Mesto`">
         </header>
         <!-- block main content -->
         <main class="content">
 
             <section class="profile">
                 <div class="profile__content">
-                    <img src="./images/profileAva.jpg" class="profile__avatar" alt="Аватарка">
+                    <img src="<%=require('./images/profileAva.jpg')%>" class="profile__avatar" alt="Аватарка">
                     <div class="profile__info">
                         <h1 class="profile__name">Жак-Ив Кусто </h1>
                         <p class="profile__description">Исследователь океана Исследователь океана Исследователь океана
@@ -50,15 +49,16 @@
         <div class="popup__container">
             <button type="button" class="button popup__close popup__close_edit" aria-label="Закрыть окно"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="form popup__form popup__form_edit" name="profile-edit">
+            <form class="form popup__form popup__form_edit" name="profile-edit" novalidate>
                 <label for="username-input" class="popup__label">
                     <input id="username-input" type="text" class="popup__input" name="username"
-                        placeholder="Введите имя" value="Жак-Ив Кусто" required>
+                        placeholder="Введите имя" value="Жак-Ив Кусто" minlength="2" maxlength="40" required>
                     <span class="username-input-error popup__input-error"></span>
                 </label>
                 <label for="description-input" class="popup__label">
                     <input id="description-input" type="text" class="popup__input" name="description"
-                        placeholder="Введите описание" value="Исследователь океана" required>
+                        placeholder="Введите описание" value="Исследователь океана" minlength="2" maxlength="200"
+                        required>
                     <span class="description-input-error popup__input-error"></span>
                 </label>
                 <button type="submit" class="button popup__submit popup__submit_edit"
@@ -67,11 +67,11 @@
         </div>
     </div>
     <!-- block template card -->
-    <template id="cardItem">
+    <template id="card-item">
         <article class="card">
             <h2 class="card__title"></h2>
 
-            <img class="card__image" src="" onerror="this.src='./images/defaultPhoto.png'">
+            <img class="card__image" src="" onerror="this.src='<%=require('./images/defaultPhoto.png')%>'">
 
             <button type="button" class="button card__delete" aria-label="удалить"></button>
             <button type="button" class="button card__like" aria-label="в избранное"></button>
@@ -82,19 +82,19 @@
         <div class="popup__container">
             <button type="button" class="button popup__close popup__close_add" aria-label="Закрыть окно"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form class="form popup__form popup__form_add" name="add-card-form">
+            <form class="form popup__form popup__form_add" name="add-card-form" novalidate>
                 <label for="name-card-input" class="popup__label">
                     <input id="name-card-input" type="text" class="popup__input" name="name-card" placeholder="Название"
-                        value="" required>
+                        value="" minlength="2" maxlength="30" required>
                     <span class="name-card-input-error popup__input-error"></span>
                 </label>
                 <label for="url-card-input" class="popup__label">
                     <input id="url-card-input" type="url" class="popup__input" name="url"
                         placeholder="Ссылка на картинку" value="" required>
-                    <span class="url-input-error popup__input-error"></span>
+                    <span class="url-card-input-error popup__input-error"></span>
                 </label>
-                <button type="submit" class="button popup__submit popup__submit_add"
-                    aria-label="Создать">Создать</button>
+                <button type="submit" class="button popup__submit popup__submit_add" aria-label="Создать"
+                    disabled>Создать</button>
             </form>
         </div>
     </div>
@@ -102,11 +102,10 @@
     <div class="popup popup_photo">
         <figure class="popup__figure">
             <button type="button" class="button popup__close popup__close_photo" aria-label="Закрыть окно"></button>
-            <img class="popup__image " src="" onerror="this.src='./images/defaultPhoto.png'">
+            <img class="popup__image " src="" onerror="this.src='<%=require('./images/defaultPhoto.png')%>'">
             <h2 class="popup__name "></h2>
         </figure>
     </div>
-    <script src="./pages/index.js"></script>
 </body>
 
 </html>
